--- a/config/database.yml
+++ b/config/database.yml
@@ -15,21 +15,6 @@ test:
   database: budget_app_test
 
 production:
-  url: <%= ENV['DATABASE_URL'] %>
-  primary: &primary_production
-    <<: *default
-    database: budget_app_production
-    username: budget_app
-    password: <%= ENV["BUDGET_APP_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: budget_app_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: budget_app_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: budget_app_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
+  schema_search_path: budget,public
